# ionova

./: .gitignore  15_YEAR_REWARD_LIMIT.md  15_YEAR_VESTING_DISTRIBUTION.md  1_FRACTION_CALCULATION.md  AIRDROP_SYSTEM.md  AUTO_DAILY_REWARDS.md  CLEAR_CACHE_GUIDE.md  COMPLETE_EMISSION_SYSTEM.md  CONTRIBUTING.md  CORRECTED_REWARD_DISTRIBUTION.md  CORRECT_VESTING_EMISSION.md  DEPLOYMENT_GUIDE.md  DEPLOY_MANUAL.md  DEVELOPER_GUIDE.md  EMISSION_UPDATE_SUMMARY.md  FINAL_REWARD_CLARIFICATION.md  FINAL_VESTING_MODEL.md  LICENSE  PER_BLOCK_EMISSION.md  README.md  REWARD_MODEL_CLARIFICATION.md  SECURITY.md  TRUE_VESTING_MODEL.md  VALIDATOR_EMISSION_SCHEDULE.md  VALIDATOR_SALE_README.md  deploy-ionova.bat  deploy-ionova.sh  deploy_auto.bat  deploy_frontend.sh  deploy_manual_commands.md  deploy_quick.bat  deploy_vps.bat  deploy_vps_frontend.bat  nginx_default.conf  nginx_ionova_fixed.conf  setup_ssh_key.bat
.github/: CODEOWNERS  FUNDING.yml  PROJECT_MANAGEMENT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: contracts-ci.yml  frontend-ci.yml  node-ci.yml  security-audit.yml
backend/: admin-api.js
browser-extension/: README.md  background.js  content.js  inpage.js  manifest.json  popup.html  popup.js
cli/: README.md  package.json
cli/src/: index.ts
contracts/: .env.example  AFFILIATE_SECURITY_AUDIT.md  ECOSYSTEM.md  README.md  UPGRADE_STRATEGY.md  fix-dependencies.bat  fix-dependencies.sh  hardhat.config.js  package.json
contracts/contracts/: AdminController.sol  DynamicCommissionManager.sol  FractionBasedEmission.sol  IONXToken.sol  IUSD-Upgradeable.sol  IonovaAirdrop.sol  IonovaFaucet.sol  IonovaKYCAirdrop.sol  MasterConfigManager.sol  SimpleStorage.sol  ValidatorFractionNFT-Upgradeable.sol  ValidatorFractionNFT.sol  ValidatorFractionSale.sol  ValidatorLeaderboard.sol  ValidatorRewardDistributor.sol  WrappedIONX.sol
contracts/core/: DynamicFeeManager.sol  FeeManager.sol  ProtocolRevenueBurner.sol
contracts/governance/: FeeGovernance.sol
contracts/interfaces/: IPriceOracle.sol
contracts/oracles/: ChainlinkPriceOracle.sol  MultiOracleAggregator.sol
contracts/scripts/: deploy-ionopay.js  deploy-kyc-airdrop.js  deploy-validator-sale.js
contracts/test/: FraudDetection.test.js  IonoPay.test.js  IonovaKYCAirdrop.test.js  MockERC20.sol  ValidatorFractionNFT-Affiliate.test.js  ValidatorFractionNFT.test.js
demo-dapp/: app.js  index.html
devnet/: DEVNET_GUIDE.md  Dockerfile.validator  TESTING_GUIDE.md  docker-compose.yml  genesis.json  prometheus.yml  shard_config.json
docs/: AIRDROP_ELIGIBILITY.md  FEE_COMPARISON.md  FEE_GOVERNANCE.md  GAS_FEE_SCHEDULE.md  README.md
docs/admin-kyc/: ADMIN_KYC_CONTROLS.md  ADMIN_PANEL_SYSTEM.md  FREE_KYC_OPTIONS.md  KYC_AIRDROP_README.md  TIERED_KYC_SYSTEM.md
docs/architecture/: AI_READY_BLOCKCHAIN.md  ARCHITECTURE_FINALIZED.md  COMPLETE_ECOSYSTEM_OVERVIEW.md  CROSS_CHAIN_BRIDGES.md  ENHANCED_AFFILIATE_SYSTEM.md  NETWORK_INFRASTRUCTURE.md
docs/contracts/: ALL_CONTRACTS_UPGRADEABILITY.md  CONTRACT_ADMIN_PANELS.md  MASTER_CONFIG_SYSTEM.md
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_READINESS.md  FEE_GOVERNANCE_DEPLOYMENT.md  PRODUCTION_README.md  PRODUCTION_READY_COMPLETE.md
docs/getting-started/: DEVELOPER_TUTORIAL.md
docs/guides/: ADVANCED_OPTIONS_GUIDE.md  HOW_TO_CLAIM_REWARDS.md  (+4 more)
explorer/: package.json
faucet/: .env.example  Dockerfile  README.md  package.json
node/: Cargo.toml  Dockerfile  QUANTUM_SIGNATURES.md  README.md
node/examples/: quantum_signatures.rs
node/src/: ai_compute.rs  block_propagation.rs  bridge.rs  config.rs  crypto.rs  emission.rs  evm_executor.rs  fee_model.rs  fee_scaler.rs  finality.rs  genesis.rs  halo2.rs  ibc.rs  main.rs  mempool.rs  metrics.rs  network_security.rs  p2p_network.rs  plonk.rs  quantum_hash.rs  rate_limit.rs  rpc.rs  security.rs  sequencer.rs  staking.rs  transaction.rs  wrapped_btc.rs  zksnark.rs
node/tests/: crypto_tests.rs  security_tests.rs
requirements/: AIRDROP.md  ARCHITECTURE.md  CHEAP_HOSTING.md  DEVELOPER_GUIDE.md  FEE_MODEL.md  HARDWARE_REQUIREMENTS.md  IONOPAY_GUIDE.md  NATIVE_IONX.md  NFT_FRACTIONS.md  NODE_TYPES.md  NON_US_SALE.md  POTENTIAL.md  SOLIDITY_GUIDE.md  TECH_STACK.md  TOKENOMICS.md  VALIDATOR_SALE.md  VALIDATOR_SALE_LAUNCH.md
sdk/: ionova-sdk.js
sdk/python-sdk/: README.md  pyproject.toml
sdk/python-sdk/ionova/: __init__.py  rpc_client.py  types.py  wallet.py
sdk/rust-sdk/: Cargo.toml  README.md
sdk/rust-sdk/src/: crypto.rs  lib.rs  rpc_client.rs
server/: kyc-api.js  package.json  server.js
testnet/: docker-compose.yml
(+137 files in other folders)
