[package]
name = "ionova_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ionova_node"
path = "src/main.rs"

[[bin]]
name = "load_generator"
path = "src/bin/load_generator.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
prometheus = { version = "0.13", features = ["process"] }
warp = "0.3"
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# EVM support
revm = { version = "14", features = ["std", "serde"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
