[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ionova-sdk"
version = "1.0.0"
description = "Python SDK for Ionova blockchain"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ionova", "blockchain", "quantum-safe", "crypto"]
authors = [
  {name = "Ionova Team"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "requests>=2.28.0",
  "eth-utils>=2.3.0",
  "eth-keys>=0.4.0",
  "pycryptodome>=3.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ionova/ionova-python-sdk"
Documentation = "https://docs.ionova.network"
Repository = "https://github.com/ionova/ionova-python-sdk"
