[package]
name = "ionova-sdk"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for Ionova blockchain"
license = "MIT"
repository = "https://github.com/ionova/ionova-sdk"

[dependencies]
# Reuse node crypto code
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Cryptography (reuse from node)
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
secp256k1 = { version = "0.29", features = ["recovery", "std"] }
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"

# Decimal support
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

[lib]
name = "ionova_sdk"
path = "src/lib.rs"

[[example]]
name = "send_transaction"
path = "examples/send_transaction.rs"
